--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/*
+=============== 
+Variables
+===============
+*/
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --clr-primary: #2680c0;
+  --clr-primary-dark: hsl(205, 100%, 21%);
+  --clr-primary-light: hsl(205, 84%, 74%);
+  --clr-grey-1: #102a42;
+  --clr-grey-5: #617d98;
+  --clr-grey-10: #f1f5f8;
+  --clr-white: #fff;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --transition: all 0.3s linear;
+  --spacing: 0.25rem;
+  --radius: 0.25rem;
+  --large-screen-width: 1170px;
+  --small-screen-width: 90vw;
+  --fixed-width: 50rem;
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+ul {
+  padding: 5px;
+  list-style-type: none;
+  margin-bottom: 0;
+}
+.todolist {
+  background-color: #fff;
+  padding: 20px 12px 10px 12px;
+  width: 600px;
+  margin: 30px auto;
+  border: 1px solid #ddd;
+  border-radius: 2px;
+  position: relative;
+}
+li input {
+  margin-right: 10px;
+}
+footer {
+  border-top: 1px solid #ddd;
+  background-color: #f4fce8;
+  margin: 0 -20px -10px -20px;
+  padding: 5px 5px;
+  position: relative;
+  color: #777;
+}
+.crossed-line {
+  text-decoration: line-through;
+  color: #aaa;
+}
+.form-control2 {
+  display: flex;
+  justify-content: center;
+}
+li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.active {
+  color: #2680c0;
+  border-color: #2680c0;
 }
